@@ -1,5 +1,5 @@
 ZDZ 的程序的简化版的说明, v2.0.10 (alpha)
-最后更新 2011-09-06, xyy
+最后更新 2011-10-23, xyy
 
 程序改成只有边显示图形边计算及纯计算两个模式. 其他如计算 Lyapunov 指数,
  功率谱等功能皆已去除(但愿去除干净了), 即是说关于分析的代码去除了.
@@ -43,13 +43,13 @@ ZDZ 的程序的简化版的说明, v2.0.10 (alpha)
     -ps VALUE     设置 poisson 型输入对兴奋型神经的单次强度
     -psi VALUE    设置 poisson 型输入对抑制型神经的单次强度
     --pr-mul [VALUE ...] [VALUE@POSITION ...]
-                  在命令行设置某些神经元的 poisson 输入率. 可以只设定前几个的输入率.
+                  在命令行设置各个神经元的 poisson 输入率倍率. 可以只设定前几个.
                   可以用 VALUE@POSITION 的语法指定第几个的值, 编号从 1 开始.
-                  未指定值的默认是 1. 必须提前指定神经元个数.
+                  未指定值的神经默认是 1. 必须提前指定神经元个数.
     --ps-mul [VALUE ...] [VALUE@POSITION ...]
-                  在命令行设置某些神经元的 poisson 输入强度(兴奋型). 语法参见 --pr-mul
+                  在命令行设置各个神经元的 poisson 输入强度(兴奋型)倍率. 语法参见 --pr-mul
     --psi-mul [VALUE ...] [VALUE@POSITION ...]
-                  在命令行设置某些神经元的 poisson 输入强度(抑制型). 语法参见 --pr-mul
+                  在命令行设置各个神经元的 poisson 输入强度(抑制型)倍率. 语法参见 --pr-mul
     -dt VALUE     设置时间步长为 VALUE
     --save-interval VALUE
                   输出数据的记录间隔
@@ -62,14 +62,25 @@ ZDZ 的程序的简化版的说明, v2.0.10 (alpha)
     -h, --help    显示帮助(以及一些默认值)
     --version     显示版本信息
 
-以上选项会覆盖与配置文件中的相应部分.
+命令行参数以及输出的放电时刻文件中, 神经元编号从 1 开始. (程序内部是从 0 开始的)
 
-!! 注意: 开头会有一段未平稳的状态, 未去除.
+读取程序参数的顺序是
+  1. 命令行
+  2. 配置文件(默认是 test2.txt)
+  3. 程序内置的默认值
+以先读到的值为准. 但命令行中若出现重复的选项, 以最后(右侧)的为准.
+
+!! 注意: 输出的数据开头会有一段未平稳的状态, 未去除.
+
+图形模式时显示的 Poisson 输入频率及输入强度是指第一个神经元的, 但更改时所有值同比例变化.
 
 示例:
 raster_tuning -ng -n 20 -t 10000 -inf test2_0.txt -o data/staffsave2.txt -v
  含义是不显示图形界面, 20个神经元(都是兴奋型), 计算到 10000ms,
      配置(参数)文件是 test2_0.txt, 输出到 data/staffsave2.txt, 显示更多信息.
+
+raster_tuning -n 2 -pr 1 -ps 0.012 --ps-mul 0.1@2 -v
+ 显示图形界面, 第二个神经的Poisson输入强度设为 0.1 * 0.012 (第一个仍是 0.012)
 
 raster_tuning -h
  显示帮助然后退出
@@ -80,15 +91,16 @@ test.txt            周期电流输入, POISSON_INPUT_USE 为 0 时启用
 test2.txt           Poisson 脉冲输入, POISSON_INPUT_USE 为 1 时启用
 cortical_matrix.txt 神经元间连接关系矩阵, CORTICAL_STRENGTH_NONHOMO 为 1 时启用
 
-note:(神经连接临接矩阵文件)
-多余的行不会被读入, 故可在此任意加注释.
+
+神经连接临接矩阵文件 note:
+多余的行不会被读入, 故可在末尾加任意注释.
 对角线的值不会影响计算
-第 i 行 j 列的元素表示 j 神经元对 i 神经元有影响
+第 i 行 j 列的元素表示 j 神经元对 i 神经元的影响
 连接强度的值是配置文件(默认是test2.txt)的 Strength_CorEE 或 Strength_CorIE 或
   Strength_CorEI 或 Strength_CorII (相应于连接的两个神经元的类型) 与矩阵元素的乘积
-抑制型神经的编号总在兴奋型后
+抑制型神经的编号排在兴奋型后
 矩阵的元素不必是整数
-注意: 神经元个数必须与上面方阵的阶数相同, 否则...
+神经元个数必须与连接矩阵的阶数相同, 否则...
 
 
 代码内部的宏可调节的功能有:
