@@ -13,7 +13,7 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option parameters="-ng -t 1000 -n 2" />
+				<Option parameters="-ng -dt 0.01" />
 				<Compiler>
 					<Add option="-pedantic" />
 					<Add option="-g" />
@@ -32,7 +32,6 @@
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option parameters="-ng -t 10000 -n 2 -seed 0 -ps 0.01" />
 				<Compiler>
 					<Add option="-O2" />
 				</Compiler>
