@@ -1996,7 +1996,7 @@
 	"stdafx.h"
 	"datahandling.h"
 
-1317659651 /home/xyy82148/code/sci/IFsimu/stdafx.h
+1319372766 /home/xyy82148/code/sci/IFsimu/stdafx.h
 	<stdio.h>
 	<stdlib.h>
 	<limits.h>
@@ -2021,7 +2021,7 @@
 
 1317658995 /home/xyy82148/code/sci/IFsimu/datahandling.h
 
-1317658995 source:/home/xyy82148/code/sci/IFsimu/datainput.cpp
+1317885847 source:/home/xyy82148/code/sci/IFsimu/datainput.cpp
 	"stdafx.h"
 	"random.h"
 	"datainput.h"
@@ -2039,7 +2039,7 @@
 	"stdafx.h"
 	"loop.h"
 
-1317658995 source:/home/xyy82148/code/sci/IFsimu/myopengl.cpp
+1317890311 source:/home/xyy82148/code/sci/IFsimu/myopengl.cpp
 	"stdafx.h"
 	"myopengl.h"
 	"datainput.h"
@@ -2074,7 +2074,7 @@
 	"stdafx.h"
 	"raster.h"
 
-1317659582 source:/home/xyy82148/code/sci/IFsimu/raster_tuning.cpp
+1319219970 source:/home/xyy82148/code/sci/IFsimu/raster_tuning.cpp
 	"stdafx.h"
 	<sys/types.h>
 	<sys/stat.h>
